<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout style="@style/style_linearlayout_regular">
                <TextView
                    style="@style/style_textview_regular"
                    android:text="@string/come_on_time" />
                <TextView
                    android:id="@+id/tv_oil_date"
                    style="@style/style_textview_change"/>
            </LinearLayout>
            //加油时间
            <LinearLayout style="@style/style_linearlayout_regular">
                <TextView
                    style="@style/style_textview_regular"
                    android:text="@string/jydd" />
                <TextView
                    android:id="@+id/tv_oil_location"
                    style="@style/style_textview_change"/>
            </LinearLayout>
            //加油地点
            <LinearLayout style="@style/style_linearlayout_regular">
                <TextView
                    style="@style/style_textview_regular"
                    android:text="@string/sjjyl"/>
                <TextView
                    android:id="@+id/tv_actual_oil"
                    style="@style/style_textview_change"/>
            </LinearLayout>
            //实际加油量
            <LinearLayout style="@style/style_linearlayout_regular">
                <TextView
                    style="@style/style_textview_regular"
                    android:text="@string/yjyl" />
                <TextView
                    android:id="@+id/tv_shout_oil"
                    style="@style/style_textview_change"/>
            </LinearLayout>
            //应加油量
            <LinearLayout style="@style/style_linearlayout_regular">
                <TextView
                    style="@style/style_textview_regular"
                    android:text="@string/jyfy" />
                <TextView
                    android:id="@+id/tv_oil_money"
                    style="@style/style_textview_change"/>
            </LinearLayout>
            //加油费用
            <LinearLayout style="@style/style_linearlayout_regular">
                <TextView
                    style="@style/style_textview_regular"
                    android:text="@string/sjfl" />
                <TextView
                    android:id="@+id/tv_actual_oil_money"
                    style="@style/style_textview_change"/>
            </LinearLayout>
            //实际油价
        </LinearLayout>
        //第一列
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line_hui" />//中间线
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout style="@style/style_linearlayout_regular">
                <TextView
                    style="@style/style_textview_regular"
                    android:text="@string/yon_you_liang" />
                <TextView
                    android:id="@+id/tv_oil_consumption"
                    style="@style/style_textview_change"/>
            </LinearLayout>
            //用油量
            <LinearLayout style="@style/style_linearlayout_regular">
                <TextView
                    style="@style/style_textview_regular"
                    android:text="@string/xslc"/>
                <TextView
                    android:id="@+id/tv_driven_distance"
                    style="@style/style_textview_change"/>
            </LinearLayout>
            //行驶里程
            <LinearLayout style="@style/style_linearlayout_regular">
                <TextView
                    style="@style/style_textview_regular"
                    android:text="@string/pjxh" />
                <TextView
                    android:id="@+id/tv_average_fuel_consumption"
                    style="@style/style_textview_change"/>
            </LinearLayout>
            //平均油耗
            <LinearLayout style="@style/style_linearlayout_regular">
                <TextView
                    style="@style/style_textview_regular"
                    android:text="@string/pjsd" />
                <TextView
                    android:id="@+id/tv_average_speed"
                    style="@style/style_textview_change"/>
            </LinearLayout>
            //平均速度
            <LinearLayout style="@style/style_linearlayout_regular">

                <TextView
                    style="@style/style_textview_regular"
                    android:text="@string/jjxpm"/>
                <TextView
                    android:id="@+id/tv_economic_ranking"
                    style="@style/style_textview_change"/>
            </LinearLayout>
            //经济性排名
            <LinearLayout style="@style/style_linearlayout_regular">
                <TextView
                    style="@style/style_textview_regular"
                    android:text="@string/qypz"/>
                <TextView
                    android:id="@+id/tv_gasoline_quality"
                    style="@style/style_textview_change"/>
            </LinearLayout>
            //汽油品质
        </LinearLayout>
        //第二列
    </LinearLayout>
</LinearLayout>